# chess-pgn-parser

./: .gitignore  CMakeLists.txt  README.md  chessBoard.cpp  chessBoard.h  chessMove.h  main.cpp  parser.cpp  single_move.pgn  utils.cpp
pgn/: bishop.pgn  king.pgn  queen.pgn  queen_side_castling.pgn  test.pgn
pgn/captures/: pawn_capture_2_in_same_file.pgn
pgn/castling/: king_side_castling.pgn
pgn/games/: korchnoi_spassky_game.pgn
pgn/pieces/: knight.pgn  rook.pgn
src/: CMakeLists.txt  chessBoard.cpp  chessBoard.h  chessMove.cpp  chessMove.h  chessPiece.h  chessTurn.cpp  chessTurn.h  utils.cpp  utils.h
test/: CMakeLists.txt  test_chess_board  test_chess_board.cpp
test/pgn/: test.pgn
test/pgn/ambiguous/: knight_2_in_same_file.pgn  knight_same_square.pgn
test/pgn/captures/: knight_capture.pgn  pawn_capture.pgn  pawn_en_passant.pgn
